styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;700&display=swap');

:root {
    --primario: #016170;
    --secundario: #009393;
    --terciario: #00E0C6;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    background-color: var(--secundario);
}

.pane {
  background: url(wave\ \(2\).svg);
  background-repeat: no-repeat;
  z-index: 5000;
  background-position: bottom right;
  height: calc(100vh - 10px);
  background-color: white;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 0 115px 30px 100px;
    padding-top: 20px;
    /* background-color: white;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */

}

#header__menu {
    display: flex;
    margin: auto 0;
    height: 30px;
    gap: 50px;
}

#header__logo {
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
}

.menu__element {
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
}

.menu__element:hover{
    border-bottom: 5px var(--terciario) solid;
    transition: all 0.1s ease;

}

#landing {
    font-family: 'Open sans', sans-serif;
    width: calc(100vw - 100px);
    margin-top: 50px;
    margin-left: 100px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

#landing__description{
    margin-top: 100px;
    width: 500px;
}

#landing__title {
    padding-left: 10px;
    padding-bottom: 15px;
    font-weight: 500;
    font-size: 40px;
    border-left: 5px var(--terciario) solid;
}

#landing__paragraph {
    text-align: justify;
    text-justify: inter-word;
    font-size: 18px;
    line-height: 2;
    border-left: 5px var(--terciario) solid;
    padding-left: 10px;

}

#learn__button{
    justify-content: center;
    padding: 20px;
    background-color: #00E0C6;
}

#landing__image {
    display: inline;
    width: 500px;
    height: 500px;
    margin-right: 200px;
}

#second__pane {
    background-color: white;
    border-radius: 30px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;

}

#second__pane__title {
    padding-top: 100px;
    font-weight: 400;
}

main {
    display: flex;
    flex-direction: column;
    margin: 50px;
    margin-bottom: 1000px;
    
    /* background-color: var(--secundario); */
}

#second__pane__title {
    margin: 10px auto;
}


#second__pane__description {
    margin: 0 200px;
    text-align: justify;
    font-size: 18px;
    line-height: 2;
    margin-bottom: 50px;
}

/* #second__pane__roles {
    display: flex;
    margin: 50px 200px;
    justify-content: space-between;
    flex-wrap: wrap;
} */

#second__pane__roles {
    display: grid;
    margin: 50px 200px;
    grid-template-columns: repeat(3, 1fr);
    justify-content: space-between;
    gap: 50px 150px;
}

#second__pane__roles__title {
    margin: 0 auto;
    font-weight: 400;
    font-size: 30px;
    display: block;
    width: 78%;
    text-align: center;
    padding-bottom: 30px;
    border-bottom: #00E0C6 solid 5px;
}

.second__pane__cards {
    transition: box-shadow 0.3s ease;
    min-width: 300px;
    display: flex;
    flex-direction: column;
    text-align: justify;
    padding: 20px;
    border-radius: 50px;
    background-color: white;
}

.second__pane__cards:hover{
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.card__title {
    margin: 0 auto;
    margin-bottom: 15px;
}

.second__pane__cards svg {
    margin: 0 auto;
    background-color: var(--primario);
    background-color: var(--primario);
    border-radius: 100%;
    width: 100px;
    height: 100px;
    padding: 20px;
    margin-bottom: 10px;
}

.card__paragraph {
    line-height: 1.5;
    display: none;
}

@media (max-width: 480px) {
    
    header {
        padding-left: 25px;
    }

    
    #header__menu {
      display: none;
    }

    #landing__image {
      display: none;
    }

    #landing {
        margin-left: 0;
        width: 100%;
        justify-content: center;
    }

    #landing__title {
        border-left: none;
        text-align: center;

    }

    #landing__paragraph{
        border-left: none;
        text-align: center;
    }

    main {
        margin: 25px;
    }

    .card__paragraph {
        display: none;
    }

    #second__pane__description {
        margin: 0 20px;
        text-align: justify;
        font-size: 18px;
        line-height: 2;
        margin-bottom: 50px;
    }

    #second__pane__roles {
        display: grid;
        grid-template-columns: 1fr;
        justify-content:center;
        margin: 0;
    }

    .second__pane__cards{
        margin: auto;
        width: 40px;
    }
  }

